--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,26 @@ body {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #A8FFB5;
 }
+
+h1 {
+    color: #005B0E;
+}
+
+h2 { 
+    color: #000000;    
+}
+    
+h4 { 
+    color: #005B0E;   
+} 
+    
+p { 
+    text-align: center;    
+}
+   
+img {
+    border-style: solid;
+}
+
